--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="tag_input_edit_text_label">Tag</string>
     <string name="result_tv_label">Result</string>
     <string name="crawl_button">Crawl</string>
+    <string name="special_prize_label">Gỉai đặc biệt</string>
 </resources>
