--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="tag_input_edit_text_label">Tag</string>
     <string name="result_tv_label">Result</string>
     <string name="crawl_button">Crawl</string>
-    <string name="special_prize_label">Gỉai đặc biệt</string>
+    <string name="special_prize_label">Giải đặc biệt</string>
+    <string name="first_prize_label">Giải nhất</string>
+    <string name="second_prize_label">Giải nhì</string>
 </resources>
